# Studing

./: README.md  index.md
Grade1(2020-2021)/Bubble and Merge Sort of graph's vertices/: data.txt  main.cpp  readme.txt
Grade1(2020-2021)/Chromatic number and chromatic polynomial of a graph/: data.txt  main.cpp  readme.txt
Grade1(2020-2021)/Corselt's criterion/: main.cpp  readme.txt
Grade1(2020-2021)/Cycloid/: main.cpp  readme.txt
Grade1(2020-2021)/Data Base (Admissions Committee)/: main.cpp  readme.txt
Grade1(2020-2021)/Maximum common substring/: main.cpp  readme.txt
Grade1(2020-2021)/Multiplication of matrices/: main.cpp
Grade1(2020-2021)/Polynomial List/: main.cpp  polinom.txt  readme.txt
Grade1(2020-2021)/Pong with round paddle/: main.cpp  readme.txt
Grade1(2020-2021)/Reverse polish notation and calculations/: main.cpp
Grade1(2020-2021)/Segment Tree/: main.cpp  readme.txt
Grade4(2023-2024)/FunctionalProgramming/lab2/: lab2.cabal
Grade4(2023-2024)/FunctionalProgramming/lab2/app/: Main.hs
Grade4(2023-2024)/FunctionalProgramming/lab2/src/: Gauss.hs
Grade4(2023-2024)/FunctionalProgramming/lab2/test/: Tests.hs
Leetcode/: 3Sum Closest.py  Add Digits.py  Add Two Numbers.py  Implement strStr().py  Integer to Roman.py  Letter Combinations of a Phone Number.py  Longest Common Prefix.py  Longest Palindromic Substring.py  Longest Substring Without Repeating Characters.py  Max Consecutive Ones.py  Median of Two Sorted Arrays.py  Multiply Strings.py  Palindrome Number.py  Random Pick Index.py  Reverse Integer.py  Roman to Integer.py  String to Integer (atoi).py  Two Sum.py  Valid Parentheses.py  ZigZag Conversion.py
Method of chords/: main.cpp  readme.txt
Multiplication of matrices/: data.txt  readme.txt
Reverse polish notation and calculations/: readme.txt
Work with binary file/: main.cpp
(+1582 files in other folders)
