cabal-version: 2.2

name:           lab2
version:        0.1.0.0
description:    
homepage:      
bug-reports:    
author:        
maintainer:    
copyright:      
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/githubuser/lab2

library
  exposed-modules:
      Gauss
      Lib
  other-modules:
      Paths_lab2
  autogen-modules:
      Paths_lab2
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable lab2-exe
  main-is: Main.hs
  other-modules:
      Paths_lab2
  autogen-modules:
      Paths_lab2
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lab2
  default-language: Haskell2010

test-suite lab2-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Tests
      Paths_lab2
  autogen-modules:
      Paths_lab2
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lab2
  default-language: Haskell2010
